Tests/Caravela.Framework.Tests.PublicPipeline/Tests/Aspects/InvalidCode/ConflictScope.t.cs
// CompileTimeAspectPipeline.TryExecute failed. 
// Error CR0226 on `Dictionary<IMethod,TargetCode>`: `The generic type 'Dictionary<IMethod,TargetCode>' combines run-time-only and compile-time-only types.`

